--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -1,6 +1,7 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
+\part{Anàlisi matemàtica}
 \chapter{Sèries}
 	\section{Sèries numèriques}
 	\subsection{Convergència d'una sèrie numèrica}
@@ -1486,7 +1487,7 @@
 			%TODO
 		\end{proof}
 	\end{corollary}
-	\chapter{Integrals impròpies}
+\chapter{Integrals impròpies}
 	\section{Integral impròpia de Riemann}
 	\subsection{Funcions localment integrables}
 	\begin{definition}[Funció localment integrable]
@@ -1755,7 +1756,7 @@
 		\end{solution}
 	\end{example}
 	%TODO Buscar un exemple sabroso a \url{http://www.math.uconn.edu/~kconrad/blurbs/analysis/diffunderint.pdf} per acabar tot aquest tema a lo grande.
-	\chapter{Sèries de Fourier}
+\chapter{Sèries de Fourier}
 	\section{Funcions periòdiques}
 %	\subsection{Els nombres complexos}
 	\subsection{Funcions periòdiques complexes}
