--- a/parts/AlgebraLineal.tex
+++ b/parts/AlgebraLineal.tex
@@ -1,6 +1,7 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
+\part{Àlgebra lineal}
 \chapter{Matrius}
 	\section{Matrius i operacions}
 	\subsection{Cossos}
