--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1,7 +1,8 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-	\chapter{Lògica matemàtica}
+\part{Fonaments de les matemàtiques}
+\chapter{Lògica matemàtica}
 	\section{Els fonaments}
 	\subsection{Processos fonamentals de les matemàtiques}
 	Definirem de manera informal els conceptes d'\emph{objecte matemàtic}, de \emph{relació} entre objectes i de \emph{demostració} d'una relació. Aquests són els tres processos fonamentals de les matemàtiques.
@@ -206,7 +207,7 @@
 			Ara bé, de nou per la tautologia \myref{taut:condició equivalent a conjunció}, tenim que la relació \(\lnot S\) ha de ser vertadera, i per la definició de \myref{def:negació} trobem que \(S\) és falsa.
 		\end{proof}
 	\end{tautology}
-	\chapter{Teoria de conjunts}
+\chapter{Teoria de conjunts}
 	\section{Conjunts}
 	\subsection{Elements i subconjunts}
 	Igual que en la secció anterior, només farem una introducció informal a la teoria de conjunts.
@@ -503,7 +504,7 @@
 		\[X/\sim=\{[x]\mid x\in X\}\]
 		com el conjunt quocient de \(X\) per \(\sim\).
 	\end{definition}
-	\chapter{Conjunts amb operacions i els nombres}
+\chapter{Conjunts amb operacions i els nombres}
 	\section{Els nombres naturals}
 	\subsection{Axiomes de Peano}
 	\begin{definition}[Nombres naturals]
