--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -1,7 +1,8 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-	\chapter{Aviat}
+\part{Coses per fer}
+\chapter{Aviat}
 	Podeu trobar la versió actualitzada d'aquest pdf seguint aquest \href{https://claudilleyda.github.io}{link}.
 	%	\subsection{Ignorar}
 	%	\begin{enumerate}
