--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -1,6 +1,7 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
+\part{Topologia}
 \chapter{L'espai topològic}
 	\section{Espais mètrics}
 	\subsection{Boles i oberts}
@@ -877,7 +878,7 @@
 		
 		Aquesta definició té sentit per la proposició \myref{prop:quocient d'un espai per l'acció d'un grup relació}.
 	\end{definition}
-	\chapter{Espais topològics}
+\chapter{Espais topològics}
 	\section{Espais compactes}
 	\subsection{Recobriments}
 	\begin{definition}[Recobriment]
@@ -1376,7 +1377,7 @@
 	\end{theorem}
 %	\section{La topologia de Zariski}
 %	\subsection{Propietats de la topologia de Zariski}
-	\chapter{Espais connexos}
+\chapter{Espais connexos}
 	\section{Connexió}
 	\subsection{Els espais connexos}
 	\begin{proposition}
