Arreglada secció que hauria de ser una secció (La longitud d'una corba i el paràmetre arc)

--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -88,7 +88,7 @@
 			Com que per hipòtesi \(\alpha\) és regular, per la definició de \myref{def:corba regular} trobem que \(\alpha'(h(t))\neq\vec{0}\) per a tot \(t\in J\). Ara bé, pel \corollari \myref{cor:difeomorfisme és equivalent a ser injectiva i tenir diferencial amb determinant no nul} trobem que \(h'(t)\neq\vec{0}\) per a tot \(t\in J\), i per tant tenim que \(\beta'(t)\neq\vec{0}\) per a tot \(t\in J\), i per la definició de \myref{def:corba regular} trobem que \(\beta\) és una corba regular.
 		\end{proof}
 	\end{proposition}
-	\section{La longitud d'una corba i el paràmetre arc}
+	\subsection{La longitud d'una corba i el paràmetre arc}
 	\begin{definition}[Longitud d'una corba]
 		\labelname{longitud d'una corba}\label{def:longitud d'una corba}
 		Siguin \(\alpha\) una corba sobre \(I\) i \(a\), \(b\) dos punts de \(I\). Aleshores definim
