Error minúscul a un exemple. Un typo

--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -107,7 +107,7 @@
 				&=\int_{0}^{x}\norm{(-\sin(t),\cos(t),1)}\diff t \\
 				&=\int_{0}^{x}\sqrt{\sin^{2}(t)+\cos^{2}(t)+1}\diff t \\
 				&=\int_{0}^{x}\sqrt{2}\diff t \\
-				&=[\sqrt{2}t]_{0}^{x}=\sqrt{x}.\qedhere
+				&=[\sqrt{2}t]_{0}^{x}=\sqrt{2}x.\qedhere
 			\end{align*}
 		\end{solution}
 	\end{example}
