Afegida teoria a la secció del paràmetre arc a geometria diferencial.

--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -167,6 +167,7 @@
 		Direm que \(f\) és diferenciable en \(a\) si existeix aquest \(df(a)\).
 	\end{definition}
 	\begin{observation}
+		\label{obs:diferencial en d=1 és com derivar}
 		Observem que en aquesta definició, si \(d=1\), \(f\) és diferenciable en \(a\) \(\sii f\) és derivable en \(a\), i \(df(a)(\vec{h})=\vec{h}f'(a)\) (Si \(d=1\), multiplicar per un vector de \(\mathbb{R}\) és com multiplicar per un escalar).
 	\end{observation}
 	\begin{proposition}
