--- a/Apunts.tex
+++ b/Apunts.tex
@@ -127,6 +127,7 @@
 \DeclareMathOperator{\Ima}{Im}
 \DeclareMathOperator{\Antiima}{\Ima^{-1}}
 \DeclareMathOperator{\cosdefraccions}{Q}
+\DeclareMathOperator{\funciolongituddarc}{S}
 
 \DeclareMathOperator*{\suport}{Supp}
 
@@ -319,6 +320,17 @@
 		\hrule
 		\vspace*{15\p@}%
 	}}
+\makeatother
+
+\makeatletter
+	\let\oldr@@t\r@@t
+	\def\r@@t#1#2{%
+	\setbox0=\hbox{$\oldr@@t#1{#2\,}$}\dimen0=\ht0
+	\advance\dimen0-0.2\ht0
+	\setbox2=\hbox{\vrule height\ht0 depth -\dimen0}%
+	{\box0\lower0.4pt\box2}}
+	\LetLtxMacro{\oldsqrt}{\sqrt}
+	\renewcommand*{\sqrt}[2][\ ]{\oldsqrt[#1]{#2}}
 \makeatother
 
 \let\originalpart=\part
