Arreglats typos i errors variats per tot el pdf

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -36,7 +36,7 @@
 			\[\sum_{n=0}^{\infty}1^{n}\]
 			és divergent.
 			
-			Estudiem ara el cas \(r\neq1\). Tenim que \(\sum_{n=0}^{N}r^{n}=r^{0}+r^{1}+r^{2}+\cdots\), i per tant
+			Estudiem ara el cas \(r\neq1\). Tenim que \(\sum_{n=0}^{N}r^{n}=r^{0}+r^{1}+r^{2}+\cdots+r^{N}\), i per tant
 			\begin{align*}
 				(1-r)\sum_{n=0}^{N}r^{n}&=(1-r)(r^{0}+r^{1}+r^{2}+\cdots+r^{N})\\
 				&=r^{0}+r^{1}+r^{2}+\dots+r^{N}-(r^{1}+r^{2}+r^{3}+\dots+r^{N+1})\\
