--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -1125,7 +1125,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{corollary}
-		Si \(G\) té ordre \(p^{n}q^{m}\) on \(p,q\) són primers amb \(p<q\) aleshores \(n_{q}=1\), i pel corol·lari \myref{corollary:Segon Teorema de Sylow}, el \(p\)-subgrup de Sylow de \(G\) és un subgrup normal.
+		Si \(G\) té ordre \(p^{n}q^{m}\) on \(p,q\) són primers amb \(p<q\) aleshores \(n_{q}=1\), i pel corol·lari \myref{corollary:Segon Teorema de Sylow}, el \(p\)-subgrup de Sylow de \(G\) és un subgrup normal de \(G\).
 	\end{corollary}
 \chapter{Teoria d'anells}
 	\section{Anells}
