--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -172,7 +172,7 @@
 	\end{definition}
 	\begin{definition}[Conjugat d'un nombre complex]
 		\labelname{conjugat d'un nombre complex}\label{def:nombre d'un nombre complex}
-		Sigui \(z+a+b\iu\) un nombre complex. Aleshores definim
+		Sigui \(z=a+b\iu\) un nombre complex. Aleshores definim
 		\[\conjugat{z}=a-b\iu\]
 		com el conjugat de \(z\).
 	\end{definition}
