Afegida teoria a geometria diferencial fins abans de les fórmules de Frenet

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -145,6 +145,7 @@
 \newcommand{\uniodisjunta}{\sqcup}
 \newcommand{\componentconnex}{\mathrm{C}}
 \newcommand{\biguniodisjunts}{\bigsqcup}
+\newcommand{\prodvec}{\mathbin{\wedge}}
 
 \newcommand{\sii}{\iff}
 \newcommand{\implica}{\implies}
