--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1481,7 +1481,7 @@
 			\[X=\{\overline{a},\overline{2a},\overline{3a},\dots,\overline{(p-1)a}\}.\]
 			Veiem que tots els elements de \(X\) són diferents. Efectivament, si \(na\equiv ma\pmod{p}\) per a certs enters \(n\) i \(m\) per la definició de \myref{def:nombre modular invertible} trobem que \(n\equiv m\pmod{p}\).
 			
-			També tenim que
+			També tenim que % REVISAR % FER % WTF Com? %TODO
 			\[a\cdot2a\cdot3a\cdots(p-1)a\equiv 1\cdot2\cdot3\cdots(p-1)\pmod{p},\]
 			i per tant
 			\[a^{n-1}(p-1)!\equiv(p-1)!\pmod{p},\]
