--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -77,9 +77,12 @@
 		\labelname{classe de diferenciabilitat d'una funció}\label{def:Classe de diferenciabilitat}
 		Sigui \(f\) una funció \(n\)-vegades diferenciable amb \(f^{(n)}\) contínua. Direm que \(f\) és de classe \(\mathcal{C}^{n}\) o que \(f\in\mathcal{C}^{n}\).
 	\end{definition}
-	\begin{definition}[Funció monòtona]
-		\labelname{funció monòtona}\label{def:funció monòtona}
-		Sigui \(f\colon[a,b]\to\mathbb{R}\) una funció. Direm que és \(f\) és monòtona si, per a qualsevol \(x,y\in[a,b]\), \(x>y\) implica \(f(x)\geq f(y)\).
+%	\begin{definition}[Funció monòtona]
+%		\labelname{funció monòtona}\label{def:funció monòtona}
+%		Sigui \(f\colon[a,b]\to\mathbb{R}\) una funció. Direm que és \(f\) és monòtona si, per a qualsevol \(x,y\in[a,b]\), \(x>y\) implica \(f(x)\geq f(y)\).
+%	\end{definition}
+	\begin{definition}[Derivada]
+		\labelname{derivada}\label{def:derivada}
 	\end{definition}
 	\begin{definition}[Notació de Landau]
 		\labelname{notació de Landau}\label{def:Landau}
