--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -30,7 +30,7 @@
 			Prenem un polinomi
 			\[p(x)=a_{0}+a_{1}x+a_{2}x^{2}+\dots+a_{n}x^{n}\]
 			i un natural \(k\in\mathbb{N}\). Si \(k\leq n\) tenim que % REFS
-			\[p^{(k)}(x)=k!a_{k}+(k+1)a_{k+1}x+\dots+\frac{k!}{(n-k)!}a_{n}x^{n-k},\]
+			\[p^{(k)}(x)=k!a_{k}+(k+1)!a_{k+1}x+\dots+\frac{n!}{(n-k)!}a_{n}x^{n-k},\]
 			i si \(k>n\) tenim que
 			\[p^{(k)}(x)=0.\]
 			Aleshores per la definició de \myref{def:classe de diferenciabilitat infinita} tenim que \(p(x)\) és de classe \(\mathcal{C}^{\infty}\). Observem que
@@ -224,6 +224,7 @@
 		per a tot \(p\leq r\). Aleshores direm que \(\alpha\) i \(\beta\) tenen contacte d'ordre \(r\) en \(t_{0}\).
 	\end{definition}
 	\begin{proposition}
+		\label{prop:contacte r és equivalent a tenir les r primeres derivades iguals}
 		Siguin \(\alpha\) i \(\beta\) dues corbes en \(I\) parametritzades per l'arc i \(t_{0}\in I\) un punt. Aleshores \(\alpha\) i \(\beta\) tenen contacte d'ordre \(r\) en \(t_{0}\) si i només si
 		\[\alpha^{(p)}(t_{0})=\beta^{(p)}(t_{0})\quad\text{i}\quad\alpha^{(r+1)}(t_{0})\neq\beta^{(r+1)}(t_{0})\]
 		per a tot \(p\leq r\).
@@ -233,15 +234,37 @@
 			per a tot \(p\leq r\). Tenim que, per a tot \(p\leq r\) es satisfà
 			\[\alpha^{(p)}(t_{0})=\beta^{(p)}(t_{0}),\]
 			o equivalentment
-			\[\alpha^{(p)}(t_{0})-\beta^{(p)}(t_{0})=0.\]
+			\begin{equation}
+				\label{prop:contacte r és equivalent a tenir les r primeres derivades iguals:eq1}
+				\alpha^{(p)}(t_{0})-\beta^{(p)}(t_{0})=0.
+			\end{equation}
 			Prenem \(n\leq r\), i per la definició de \myref{def:derivada} trobem que
 			\begin{align*}
 			\alpha^{(n)}(t_{0})-\beta^{(n)}(t_{0})&=\lim_{t\to t_{0}}\left(\frac{\alpha^{(n-1)}(t_{0})-\alpha^{(n-1)}(t)}{t-t_{0}}-\frac{\beta^{(n-1)}(t_{0})-\beta^{(n-1)}(t)}{t-t_{0}}\right) \\
 			&=\lim_{t\to t_{0}}\left(\frac{\alpha^{(n-1)}(t_{0})-\alpha^{(n-1)}(t)-\beta^{(n-1)}(t_{0})+\beta^{(n-1)}(t)}{t-t_{0}}\right) \\
 			&=\lim_{t\to t_{0}}\left(\frac{\alpha^{(n-1)}(t_{0})-\beta^{(n-1)}(t_{0})}{t-t_{0}}-\frac{\alpha^{(n-1)}(t)-\beta^{(n-1)}(t)}{t-t_{0}}\right)
 			\intertext{Ara bé, tenim que \(\alpha^{(n-1)}(t_{0})-\beta^{(n-1)}(t_{0})=0\), i per tant}
-			&=\lim_{t\to t_{0}}\frac{\beta^{(n-1)}(t)-\alpha^{(n-1)}(t)}{t-t_{0}}=0.
+			&=\lim_{t\to t_{0}}\frac{\beta^{(n-1)}(t)-\alpha^{(n-1)}(t)}{t-t_{0}}=0,
 			\end{align*}
+			 i tenim que
+			 \[\lim_{t\to t_{0}}\frac{\alpha(t)-\beta(t)}{(t-t_{0})^{p}}=0.\]
+			 
+			 Considerem ara
+			 \[\alpha^{(r+1)}(t_{0})\neq\beta^{(r+1)}(t_{0}).\]
+			 Tenim que
+			 \[\alpha^{(r+1)}(t_{0})-\beta^{(r+1)}(t_{0})\neq0.\]
+			 Ara bé, per la definició de \myref{def:derivada} trobem que
+			 \begin{align*}
+				 \alpha^{(r+1)}(t_{0})-\beta^{(r+1)}(t_{0})&=\lim_{t\to t_{0}}\left(\frac{\alpha^{(r)}(t_{0})-\alpha^{(r)}(t)}{t-t_{0}}-\frac{\beta^{(r)}(t_{0})-\beta^{(r)}(t)}{t-t_{0}}\right) \\
+				 &=\lim_{t\to t_{0}}\frac{\alpha^{(r)}(t_{0})-\alpha^{(r)}(t)-\beta^{(r)}(t_{0})+\beta^{(r)}(t)}{t-t_{0}} \\
+				 &=\lim_{t\to t_{0}}\frac{\beta^{(r)}(t)-\alpha^{(r)}(t)}{t-t_{0}}\neq0 \tag{\ref{prop:contacte r és equivalent a tenir les r primeres derivades iguals:eq1}}
+			 \end{align*}
+			 i per tant
+			 \[\lim_{t\to t_{0}}\frac{\alpha(t)-\beta(t)}{(t-t_{0})^{r+1}}\neq0\]
+			 i per la definició de \myref{def:contacte entre dues corbes parametritzades per l'arc} tenim que \(\alpha\) i \(\beta\) tenen contacte \(r\).a
 		\end{proof}
 	\end{proposition}
+	\subsection{Fórmules de Frenet de corbes parametritzades per l'arc}
+	\begin{definition}[]
+	\end{definition}
 \end{document}
