Canvi del nom de la secció de les fórmules de Drenet

--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -264,7 +264,7 @@
 			 i per la definició de \myref{def:contacte entre dues corbes parametritzades per l'arc} tenim que \(\alpha\) i \(\beta\) tenen contacte \(r\).a
 		\end{proof}
 	\end{proposition}
-	\subsection{Fórmules de Frenet de corbes parametritzades per l'arc}
+	\subsection{Fórmules de Frenet} % de corbes parametritzades per l'arc
 	\begin{definition}[]
 	\end{definition}
 \end{document}
