Canvi del nom de la secció de les fórmules de Frenet

--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -261,7 +261,7 @@
 			 \end{align*}
 			 i per tant
 			 \[\lim_{t\to t_{0}}\frac{\alpha(t)-\beta(t)}{(t-t_{0})^{r+1}}\neq0\]
-			 i per la definició de \myref{def:contacte entre dues corbes parametritzades per l'arc} tenim que \(\alpha\) i \(\beta\) tenen contacte \(r\).a
+			 i per la definició de \myref{def:contacte entre dues corbes parametritzades per l'arc} tenim que \(\alpha\) i \(\beta\) tenen contacte \(r\).
 		\end{proof}
 	\end{proposition}
 	\subsection{Fórmules de Frenet} % de corbes parametritzades per l'arc
